Removed The for Netherlands

--- a/2009.md
+++ b/2009.md
@@ -14,7 +14,7 @@
 | Apr 10, 2009 | Apr 6, 2009 | ICTAC | <a href="http://www.ictac.net/ictac09/">6th International Colloquium on Theoretical Aspects of Computing</a> | Aug 18-20, 2009 | Kuala Lumpur, Malaysia | 
 | Apr 10, 2009 | Apr 3, 2009 | CONCUR | <a href="http://concur09.cs.unibo.it/">20th International Conference on Concurrency Theory</a> | Sep 1-4, 2009 | Bologna, Italy | 
 | Apr 7, 2009 | Apr 1, 2009 | FMICS | <a href="http://www.dsic.upv.es/workshops/fmics2009">14th International Workshop on Formal Methods for Industrial Critical Systems</a> | Nov 2-3, 2009 | Eindhoven, Netherlands | 
-| Mar 16, 2009 |  | ESEC/FSE | <a href="http://www.esec-fse-2009.ewi.tudelft.nl/">7th joint meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering</a> | Aug 24-28, 2009 | Amsterdam, The Netherlands | 
+| Mar 16, 2009 |  | ESEC/FSE | <a href="http://www.esec-fse-2009.ewi.tudelft.nl/">7th joint meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering</a> | Aug 24-28, 2009 | Amsterdam, Netherlands | 
 | Mar 9, 2009 | Mar 2, 2009 | SOSP | <a href="http://www.sigops.org/sosp/sosp09/">22nd ACM Symposium on Operating Systems Principles</a> | Oct 11-14, 2009 | Big Sky, Montana, USA | 
 | Mar 9, 2009 |  | SPIN | <a href="http://ti.arc.nasa.gov/event/spin09/">16th International SPIN Workshop on Model Checking Software</a> | Jun 26-28, 2009 | Grenoble, France | 
 | Mar 8, 2009 | Mar 1, 2009 | RV | <a href="http://www-rv2009.imag.fr/">9th Workshop on Runtime Verification</a> | Jun 26-28, 2009 | Grenoble, France | 
