--- a/2011.md
+++ b/2011.md
@@ -8,7 +8,7 @@
 | Jun 13, 2011 |  | AVOCS | <a href="http://conferences.ncl.ac.uk/AVoCS2011/">11th International Workshop on Automated Verification of Critical Systems</a> | Sep 12-14, 2011 | Newcastle upon Tyne, UK | 
 | May 30, 2011 |  | SBMF | <a href="http://www.each.usp.br/cbsoft2011/ingles/sbmf/sbmf_en.html">14th Brazilian Symposium on Formal Methods</a> | Sep 26-30, 2011 | Sao Paulo, Brazil | 
 | May 18, 2011 | May 11, 2011 | FMCAD | <a href="http://www.cs.utexas.edu/users/ragerdl/fmcad11/">International Conference on Formal Methods in Computer-Aided Design</a> | Oct 30 - Nov 2, 2011 | Austin, Texas, USA | 
-| May 16, 2011 | May 9, 2011 | SSV | <a href="https://es.fbk.eu/events/ssv2011/index.php">6th International Workshop on Systems Software Verification</a> | Aug 26-27, 2011 | Nijmegen, The Netherlands | 
+| May 16, 2011 | May 9, 2011 | SSV | <a href="https://es.fbk.eu/events/ssv2011/index.php">6th International Workshop on Systems Software Verification</a> | Aug 26-27, 2011 | Nijmegen, Netherlands | 
 | May 9, 2011 | Apr 25, 2011 | ASE | <a href="http://www.continuinged.ku.edu/programs/ase/">26th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 6-10, 2011 | Lawrence, Kansas, USA | 
 | Jun 5, 2011 |  | RV | <a href="http://rv2011.eecs.berkeley.edu">2nd International Conference on Runtime Verification</a> | Sep 27-30, 2011 | San Francisco, California, USA | 
 | May 6, 2011 | May 2, 2011 | ATVA | <a href="http://www2.ee.ntu.edu.tw/~atva2011/">9th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 11-14, 2011 | Taipei, Taiwan | 
