--- a/2014.md
+++ b/2014.md
@@ -6,7 +6,7 @@
 | Jul 29, 2014 |  | HVC | <a href="http://www.research.ibm.com/haifa/conferences/hvc2014/">10th Haifa Verification Conference</a> | Nov 18-20, 2014 | IBM Haifa Labs, Israel | 
 | Jul 15, 2014 | Jul 8, 2014 | SBMF | <a href="http://www.ic.ufal.br/evento/cbsoft2014/en/sbmf.html">17th Brazilian Symposium on Formal Methods</a> | Sep 29-31, 2014 | Maceió, Brazil | 
 | Jun 27, 2014 | Jun 20, 2014 | MUSEPAT | <a href="http://eventos.fct.unl.pt/musepat2014/">International Conference on Multicore Software Engineering, Performance, and Tools</a> | Nov 16-17, 2014 | Hong Kong, China | 
-| Jun 23, 2014 | Jun 16, 2014 | AVOCS | <a href="http://fmt.cs.utwente.nl/conferences/avocs2014/">14th International Workshop on Automated Verification of Critical Systems</a> | Sep 24-26, 2014 | Enschede, The Netherlands | 
+| Jun 23, 2014 | Jun 16, 2014 | AVOCS | <a href="http://fmt.cs.utwente.nl/conferences/avocs2014/">14th International Workshop on Automated Verification of Critical Systems</a> | Sep 24-26, 2014 | Enschede, Netherlands | 
 | Jun 2, 2014 | May 26, 2014 | APLAS | <a href="http://www.math.nagoya-u.ac.jp/~garrigue/APLAS2014/">12th Asian Symposium on Programming Languages and Systems</a> | Nov 17-19, 2014 | Singapore | 
 | May 30, 2014 | May 24, 2014 | ISSRE | <a href="http://www.issre.net/">25th annual International Symposium on Software Reliability Engineering</a> | Nov 3-6, 2014 | Naples, Italy | 
 | May 16, 2014 | May 6, 2014 | FMCAD | <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD14/">International Conference on Formal Methods in Computer-Aided Design</a> | Oct 21-24, 2014 | Lausanne, Switzerland | 
@@ -45,7 +45,7 @@
 | Oct 11, 2013 | Oct 4, 2013 | FOSSACS | <a href="http://www.etaps.org/index.php/2014/fossacs-2014">17th International Conference on Foundations of Software Science and Computation Structures</a> | Apr 5-13, 2014 | Grenoble, France | 
 | Oct 11, 2013 | Oct 4, 2013 | FASE | <a href="http://www.etaps.org/index.php/2014/fase-2014">17th International Conference on Fundamental Approaches to Software Engineering</a> | Apr 5-13, 2014 | Grenoble, France | 
 | Oct 11, 2013 | Oct 4, 2013 | ESOP | <a href="http://www.etaps.org/index.php/2014/esop-2014">23rd European Symposium on Programming</a> | Apr 5-13, 2014 | Grenoble, France | 
-| Oct 4, 2013 | Sep 27, 2013 | EuroSys | <a href="http://eurosys2014.vu.nl/">European Conference on Computer Systems</a> | Apr 14-17, 2014 | Amsterdam, The Netherlands | 
+| Oct 4, 2013 | Sep 27, 2013 | EuroSys | <a href="http://eurosys2014.vu.nl/">European Conference on Computer Systems</a> | Apr 14-17, 2014 | Amsterdam, Netherlands | 
 | Sep 30, 2013 | Sep 23, 2013 | ICST | <a href="http://sites.google.com/site/icst2014/">7th International Conference on Software Testing, Verification, and Validation</a> | Mar 31-Apr 4, 2014 | Cleveland, Ohio, USA | 
 | Sep 23, 2013 | Sep 16, 2013 | ISEC | <a href="http://isoft.acm.org/isec2014/">7th India Software Engineering Conference</a> | Feb 19-21, 2014 | Chennai, India | 
 | Sep 15, 2013 | Sep 8, 2013 | PPoPP | <a href="https://sites.google.com/site/ppopp2014/">19th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb, 2014 | Orlando, Florida, USA | 
