--- a/2016.md
+++ b/2016.md
@@ -23,7 +23,7 @@
 | Apr 25, 2016 | Apr 18, 2016 | AVOCS | <a href="http://fmics-avocs.isti.cnr.it/">16th International Workshop on Automated Verification of Critical Systems</a> | Sep 26-29, 2016 | Pisa, Italy | 
 | Apr 18, 2016 | Apr 11, 2016 | CONCUR | <a href="http://www.concur2016.ulaval.ca/">27th International Conference on Concurrency Theory</a> | Aug 23-26, 2016 | Quebec City, Canada | 
 | Apr 10, 2016 | Apr 3, 2016 | SAS | <a href="http://www.staticanalysis.org/sas2016/">23rd International Static Analysis Symposium</a> | Sep 8-10, 2016 | Edinburgh, UK | 
-| Mar 23, 2016 |  | SPLASH | <a href="http://2016.splashcon.org/">7th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Oct 30-Nov 4, 2016 | Amsterdam, The Netherlands | 
+| Mar 23, 2016 |  | SPLASH | <a href="http://2016.splashcon.org/">7th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Oct 30-Nov 4, 2016 | Amsterdam, Netherlands | 
 | Mar 11, 2016 |  | FSE | <a href="http://www.cs.ucdavis.edu/fse2016/">24th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 13-19, 2016 | Seattle, Washington, USA | 
 | Feb 29, 2016 | Feb 22, 2016 | SEFM | <a href="http://staf2016.conf.tuwien.ac.at/sefm/">14th IEEE International Conference on Software Engineering and Formal Methods</a> | Jul 4-8, 2016 | Vienna, Austria | 
 | Feb 19, 2016 |  | NFM | <a href="http://crisys.cs.umn.edu/nfm2016">8th NASA Formal Methods Symposium</a> | Jun 7-9, 2016 | Minneapolis, Minnesota, USA | 
@@ -34,17 +34,17 @@
 | Jan 18, 2016 | Jan 11, 2016 | LICS | <a href="http://lics.rwth-aachen.de/lics16/">31st Annual IEEE Symposium on Logic in Computer Science</a> | Jul 5-8, 2016 | New York City, New York, USA | 
 | Jan 17, 2016 | Jan 10, 2016 | TASE | <a href="http://tase2016.ecnu.edu.cn/">10th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 17-19, 2016 | Shanghai, China | 
 | Jan 12, 2016 | Jan 5, 2016 | ICS | <a href="http://ics16.bilkent.edu.tr/">30th International Conference on Supercomputing</a> | May 30-Jun 1, 2016 | Istanbul, Turkey | 
-| Jan 8, 2016 |  | SPIN | <a href="http://www.spin2016.info/">23rd International SPIN Symposium on Model Checking Software</a> | Apr 7-8, 2016 | Eindhoven, The Netherlands | 
+| Jan 8, 2016 |  | SPIN | <a href="http://www.spin2016.info/">23rd International SPIN Symposium on Model Checking Software</a> | Apr 7-8, 2016 | Eindhoven, Netherlands | 
 | Jan 6, 2016 | Dec 21, 2015 | IFM | <a href="http://en.ru.is/ifm/">12th International Conference on integrated Formal Methods</a> | Jun 1-3, 2016 | Reykjavik, Iceland | 
 | Dec 7, 2015 | Nov 27, 2015 | DSN | <a href="http://www.dsn.org/">46th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 28-Jul 1, 2016 | Toulouse, France | 
 | Nov 20, 2015 |  | PLDI | <a href="http://conf.researchr.org/home/pldi-2016">37th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 13-17, 2016 | Santa Barbara, California, United States | 
 | Oct 23, 2015 |  | ICST | <a href="http://www.cs.uic.edu/~icst2016/">9th International Conference on Software Testing, Verification, and Validation</a> | Apr 10-15, 2016 | Chicago, IL, USA | 
 | Oct 23, 2015 | Oct 16, 2015 | EuroSys | <a href="http://eurosys16.doc.ic.ac.uk/">European Conference on Computer Systems</a> | Apr 18-21, 2016 | London, UK | 
-|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 2-8, 2016 | Eindhoven, The Netherlands | 
-| Oct 16, 2015 | Oct 9, 2015 | TACAS | <a href="http://www.etaps.org/index.php/2016/tacas">22nd International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 2-8, 2016 | Eindhoven, The Netherlands | 
-| Oct 16, 2015 | Oct 9, 2015 | FOSSACS | <a href="http://www.etaps.org/index.php/2016/fossacs">19th International Conference on Foundations of Software Science and Computation Structures</a> | Apr 2-8, 2016 | Eindhoven, The Netherlands | 
-| Oct 16, 2015 | Oct 9, 2015 | FASE | <a href="http://www.etaps.org/index.php/2016/fase">19th International Conference on Fundamental Approaches to Software Engineering</a> | Apr 2-8, 2016 | Eindhoven, The Netherlands | 
-| Oct 16, 2015 | Oct 9, 2015 | ESOP | <a href="http://www.etaps.org/index.php/2016/esop">25th European Symposium on Programming</a> | Apr 2-8, 2016 | Eindhoven, The Netherlands | 
+|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 2-8, 2016 | Eindhoven, Netherlands | 
+| Oct 16, 2015 | Oct 9, 2015 | TACAS | <a href="http://www.etaps.org/index.php/2016/tacas">22nd International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 2-8, 2016 | Eindhoven, Netherlands | 
+| Oct 16, 2015 | Oct 9, 2015 | FOSSACS | <a href="http://www.etaps.org/index.php/2016/fossacs">19th International Conference on Foundations of Software Science and Computation Structures</a> | Apr 2-8, 2016 | Eindhoven, Netherlands | 
+| Oct 16, 2015 | Oct 9, 2015 | FASE | <a href="http://www.etaps.org/index.php/2016/fase">19th International Conference on Fundamental Approaches to Software Engineering</a> | Apr 2-8, 2016 | Eindhoven, Netherlands | 
+| Oct 16, 2015 | Oct 9, 2015 | ESOP | <a href="http://www.etaps.org/index.php/2016/esop">25th European Symposium on Programming</a> | Apr 2-8, 2016 | Eindhoven, Netherlands | 
 | Sep 25, 2015 | Sep 18, 2015 | ISEC | <a href="http://www.isec2016.org/">9th India Software Engineering Conference</a> | Feb 18-20, 2016 | BITS Pilani, India | 
 | Sep 11, 2015 | Sep 4, 2015 | PPoPP | <a href="http://conf.researchr.org/home/ppopp-2016">21st ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Mar 12-16, 2016 | Barcelona, Spain | 
 | Sep 11, 2015 | Sep 4, 2015 | VMCAI | <a href="http://conf.researchr.org/home/VMCAI-2016">17th International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 17-19, 2016 | St. Petersburg, Florida, USA | 
