--- a/2018.md
+++ b/2018.md
@@ -31,7 +31,7 @@
 | Feb 18, 2018 |  | SPIN | <a href="http://spin2018.uma.es/">25th International SPIN Symposium on Model Checking Software</a> | Jun 20-22, 2018 | Malaga, Spain | 
 | Jan 31, 2018 |  | CAV | <a href="http://cavconference.org/2018/">30th International Conference on Computer Aided Verification</a> | Jul 14-17, 2018 | Oxford, UK | 
 | Jan 31, 2018 | Jan 24, 2018 | LICS | <a href="http://lics.siglog.org/lics18/">33rd Annual IEEE Symposium on Logic in Computer Science</a> | Jul 9-12, 2018 | Oxford, UK | 
-| Jan 29, 2018 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2018">International Symposium on Software Testing and Analysis</a> | Jul 16-22, 2018 | Amsterdam, The Netherlands | 
+| Jan 29, 2018 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2018">International Symposium on Software Testing and Analysis</a> | Jul 16-22, 2018 | Amsterdam, Netherlands | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
 | Jan 22, 2018 | Jan 8, 2018 | FM | <a href="http://www.fm2018.org/">22nd International Symposium on Formal Methods</a> | Jul 15-17, 2018 | Oxford, UK | 
 | Jan 18, 2018 | Jan 11, 2018 | ICS | <a href="http://ics2018.ict.ac.cn/">32nd International Conference on Supercomputing</a> | Jun 13-15, 2018 | Beijing, China | 
