Updated two conferences

--- a/2019.md
+++ b/2019.md
@@ -2,11 +2,13 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Jun 28, 2019 | Jun 24, 2019 | IFM | <a href="http://ifm2019.hvl.no/">15th International Conference on integrated Formal Methods</a> | Dec 2-6, 2019 | Bergen, Norway | 
 | May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
 | May 17, 2019 | May 10, 2019 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD19/">19th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 22 - 25, 2019 | San Jose, California, USA | 
 | May 13, 2019 | May 6, 2019 | ASE | <a href="https://2019.ase-conferences.org/">34th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 11-15, 2019 | San Diego, California, USA | 
 | May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
 | May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
+| May 5, 2019 | Apr 28, 2019 | ISSRE | <a href="http://www.issre.net/">30th IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-Nov 1, 2019 | Berlin, Germany | 
 | May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
 | Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, New York, USA | 
@@ -53,10 +55,8 @@ TODOs
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
 | Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
 | May 7, 2018 | Apr 23, 2018 | SETTA | <a href="http://lcs.ios.ac.cn/setta2018/">4th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Sep 4-6, 2018 | Beijing, China | 
-| May 5, 2018 | May 1, 2018 | ISSRE | <a href="http://www.issre.net/">29th IEEE International Symposium on Software Reliability Engineering</a> | Oct 15-18, 2018 | Memphis, Tennessee, USA | 
 | May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
 | Apr 27, 2018 | Apr 20, 2018 | FMICS | <a href="http://fmics2018.fi.muni.cz/">23rd International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 3-4, 2018 | Maynooth, Ireland | 
-| Apr 20, 2018 | Apr 16, 2018 | IFM | <a href="https://ifm2018.cs.nuim.ie/">14th International Conference on integrated Formal Methods</a> | Sep 5-7, 2018 | Maynooth, Ireland | 
 | Apr 15, 2018 | Apr 10, 2018 | AVOCS | <a href="http://avocs18.irisa.fr/">18th International Workshop on Automated Verification of Critical Systems</a> | Jul 18-19, 2018 | Oxford, UK | 
 | Apr 15, 2018 | Apr 8, 2018 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2018/">16th International Workshop on Satisfiability Modulo Theories</a> | Jul 12-13, 2018 | Oxford, UK | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
