--- a/2020.md
+++ b/2020.md
@@ -2,12 +2,19 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Aug 23, 2019 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering</a> | May 23-29, 2020 | Seoul, South Korea | 
 | Jul 10, 2019 |  | POPL | <a href="https://popl20.sigplan.org/">47th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 19-25, 2020 | New Orleans, Louisiana, USA | 
 
 
 <!---
 
+2019 TODOs
+
+| Jul 15, 2019 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2019/">24th IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 1-3, 2019 | Kyoto, Japan | 
 | Jun 28, 2019 | Jun 24, 2019 | IFM | <a href="http://ifm2019.hvl.no/">15th International Conference on integrated Formal Methods</a> | Dec 2-6, 2019 | Bergen, Norway | 
+| Jun 21, 2019 |  | SETTA | <a href="http://www4.comp.polyu.edu.hk/~csguannan/setta19/">5th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 27-29, 2019 | Shanghai, China | 
+| Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
+| Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
 | May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
 | May 17, 2019 | May 10, 2019 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD19/">19th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 22 - 25, 2019 | San Jose, California, USA | 
 | May 13, 2019 | May 6, 2019 | ASE | <a href="https://2019.ase-conferences.org/">34th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 11-15, 2019 | San Diego, California, USA | 
@@ -17,6 +24,8 @@
 | May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
 | Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, New York, USA | 
+| Apr 26, 2019 | Apr 19, 2019 | FMICS | <a href="https://fmics2019.fsa.win.tue.nl">24th International Conference on Formal Methods for Industrial Critical Systems</a> | Aug 30-31, 2019 | Amsterdam, Netherlands | 
+| Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 22, 2019 | Apr 15, 2019 | CONCUR | <a href="https://event.cwi.nl/concur2019/">30th International Conference on Concurrency Theory</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
@@ -29,6 +38,7 @@
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
 | Feb 20, 2019 |  | FSE | <a href="https://esec-fse19.ut.ee/">27th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 26-30, 2019 | Tallinn, Estonia | 
 | Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, New York, USA | 
+| Feb 1, 2019 | Jan 25, 2019 | ICS | <a href="https://ics19.eecis.udel.edu/">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA | 
 | Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
 | Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July 15-19, 2019 | London, UK | 
 | Jan 11, 2019 | Jan 4, 2019 | LICS | <a href="https://lics.siglog.org/lics19/">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 24-27, 2019 | Vancouver, Canada | 
@@ -45,24 +55,15 @@
 | Oct 12, 2018 | Oct 5, 2018 | ICST | <a href="http://icst2019.xjtu.edu.cn/">12th International Conference on Software Testing, Verification, and Validation</a> | Apr 24-26, 2019 | Xian, China |
 | Oct 1, 2018 |  | VMCAI | <a href="http://popl19.sigplan.org/track/VMCAI-2019">20th International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | Lisbon, Portugal | 
 | Oct 1, 2018 | Sep 24, 2018 | EuroSys | <a href="https://www.eurosys2019.org/">European Conference on Computer Systems</a> | March 25-28, 2019 | Dresden, Germany | 
-| Aug 24, 2018 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2019">41st International Conference on Software Engineering</a> | May 25-31, 2019 | Montreal, Canada | 
 | Aug 13, 2018 |  | PPoPP | <a href="https://ppopp19.sigplan.org/">24th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 16-20, 2019 | Washington, DC, USA | 
 
 
-
-TODOs
+2018 TODOs
 
 | Aug 13, 2018 | Aug 6, 2018 | LPAR | <a href="https://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | Nov 16-21, 2018 | Awassa, Ethiopia | 
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
-| Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
-| Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
-| May 7, 2018 | Apr 23, 2018 | SETTA | <a href="http://lcs.ios.ac.cn/setta2018/">4th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Sep 4-6, 2018 | Beijing, China | 
 | May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
-| Apr 27, 2018 | Apr 20, 2018 | FMICS | <a href="http://fmics2018.fi.muni.cz/">23rd International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 3-4, 2018 | Maynooth, Ireland | 
-| Apr 15, 2018 | Apr 10, 2018 | AVOCS | <a href="http://avocs18.irisa.fr/">18th International Workshop on Automated Verification of Critical Systems</a> | Jul 18-19, 2018 | Oxford, UK | 
-| Apr 15, 2018 | Apr 8, 2018 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2018/">16th International Workshop on Satisfiability Modulo Theories</a> | Jul 12-13, 2018 | Oxford, UK | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
-|  |  | ICS | <a href="">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA |
 | May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
 | Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
 
