--- a/2019.md
+++ b/2019.md
@@ -6,6 +6,7 @@
 | Jun 28, 2019 | Jun 24, 2019 | IFM | <a href="http://ifm2019.hvl.no/">15th International Conference on integrated Formal Methods</a> | Dec 2-6, 2019 | Bergen, Norway | 
 | Jun 21, 2019 |  | SETTA | <a href="http://www4.comp.polyu.edu.hk/~csguannan/setta19/">5th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 27-29, 2019 | Shanghai, China | 
 | Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
+| Jun 7, 2019 | May 31, 2019 | MEMOCODE | <a href="https://memocode.github.io/2019/">17th ACM-IEEE International Conference on Formal Methods and Models for System Design</a> | Oct 9-11, 2019 | San Diego, California, USA | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
 | May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
 | May 17, 2019 | May 10, 2019 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD19/">19th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 22 - 25, 2019 | San Jose, California, USA | 
