--- a/2020.md
+++ b/2020.md
@@ -2,8 +2,30 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org/">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, California, USA | 
+| January 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, California, USA | 
+| Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, California, USA | 
+| Jan 10, 2020 |  | ECOOP | <a href="https://2020.ecoop.org/">34th European Conference on Object-Oriented Programming</a> | Jul 13-17, 2020 | Berlin, Germany | 
+| TBD | TBD | ICS | <a href="https://www.ics-conference.org/index.html">34rd International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
+| Dec 13, 2020 | Dec 3, 2019 | DSN | <a href="http://www.dsn.org/">50th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 29-Jul 2, 2020 | Valencia, Spain | 
+| Nov 22, 2019 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2020">41st ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 15-20, 2020 | London, United Kingdom | 
+| Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org/">European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
+|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 25-30, 2020 | Dublin, Ireland | 
+| Oct 24, 2019 | | TACAS | <a href="https://www.etaps.org/2020/tacas">26th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 25-30, 2020 | Dublin, Ireland | 
+| Oct 24, 2019 |  | FASE | <a href="https://www.etaps.org/2020/fase">23rd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 25-30, 2020 | Dublin, Ireland |
+| Oct 24, 2019 |  | FoSSaCS | <a href="https://www.etaps.org/2020/fossacs">23rd International Conference on Foundations of Software Science and Computation Structures</a> | 25-30 April 25-30, 2020 | Dublin, Ireland | 
+| Oct 24, 2019 |  | ESOP | <a href="https://www.etaps.org/2020/esop"> 29th European Symposium on Programming</a> | Apr 25-30, 2020 | Dublin, Ireland | 
+| Oct 18, 2019 | | ISEC | <a href="https://isoft.acm.org/isec2020/">13th Innovations in Software Engineering Conference</a> | Feb 27-29, 2020 | Jabalpour, M.P, India | 
+| Oct 14, 2019 |  | ICST | <a href="https://icst2020.info/">13th International Conference on Software Testing, Verification, and Validation</a> | March 23-27, 2020 | Porto, Portugal | 
+| Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | New Orleans, LA, USA | 
 | Aug 23, 2019 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering</a> | May 23-29, 2020 | Seoul, South Korea | 
+| August 6, 2019 | Jul 31, 2019 | PPoPP | <a href="https://ppopp20.sigplan.org/">25th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 22-26, 2020 | San Diego, CA, USA | 
 | Jul 10, 2019 |  | POPL | <a href="https://popl20.sigplan.org/">47th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 19-25, 2020 | New Orleans, Louisiana, USA | 
+| Dec 19, 2019 | Dec 12, 2019 | NFM | <a href="https://ti.arc.nasa.gov/events/nfm-2020/">12th NASA Formal Methods Symposium</a> | May 11-15, 2020 | Moffett Field, CA, USA | 
+| Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
+| Jan 10, 2020 | Jan 6, 2020 | LICS | <a href="https://lics.siglog.org/lics20/">35th Annual IEEE Symposium on Logic in Computer Science</a> | Jul 8-12, 2020 | Beijing, China | 
+
+
 
 
 <!---
@@ -36,26 +58,10 @@
 | Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
 | Apr 5, 2019 |  | SPLASH | <a href="https://2019.splashcon.org">10th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Oct 20-25, 2019 | Athens, Greece | 
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
-| Feb 20, 2019 |  | FSE | <a href="https://esec-fse19.ut.ee/">27th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 26-30, 2019 | Tallinn, Estonia | 
-| Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, New York, USA | 
-| Feb 1, 2019 | Jan 25, 2019 | ICS | <a href="https://ics19.eecis.udel.edu/">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA | 
-| Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
-| Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July 15-19, 2019 | London, UK | 
-| Jan 11, 2019 | Jan 4, 2019 | LICS | <a href="https://lics.siglog.org/lics19/">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 24-27, 2019 | Vancouver, Canada | 
-| Jan 11, 2019 | Jan 4, 2019 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">13th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 29-31, 2019 | Guilin, China | 
-| Dec 14, 2018 | Dec 7, 2018 | NFM | <a href="https://robonaut.jsc.nasa.gov/R2/pages/nfm2019.html">11th NASA Formal Methods Symposium</a> | May 7-9, 2019 | Houston, Texas, USA | 
-| Dec 7, 2018 | Nov 30, 2018 | DSN | <a href="http://www.dsn.org/">49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 24-27, 2019 | Portland, Oregon, USA |
-| Nov 16, 2018 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2019">40th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 24-26, 2019 | Phoenix, Arizona, USA |
-|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 6-11, 2019 | Prague, Czech Republic |
-| Nov 15, 2018 | Nov 7, 2018 | TACAS | <a href="https://conf.researchr.org/track/etaps-2019/tacas-2019-papers">25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 8-11, 2019 | Prague, Czech Republic | 
-| Nov 15, 2018 | Nov 7, 2018 | FOSSACS | <a href="https://conf.researchr.org/track/etaps-2019/fossacs-2019-papers">22nd International Conference on Foundations of Software Science and Computation Structures</a> | Apr 8-11, 2019 | Prague, Czech Republic |
-| Nov 15, 2018 | Nov 7, 2018 | FASE | <a href="https://conf.researchr.org/track/etaps-2019/fase-2019-papers">22nd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 8-11, 2019 | Prague, Czech Republic |
-| Nov 15, 2018 | Nov 7, 2018 | ESOP | <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming</a> | Apr 8-11, 2019 | Prague, Czech Republic | 
-| Oct 31, 2018 | | ISEC | <a href="http://isoft.acm.org/isec2019/">12th Innovations in Software Engineering Conference</a> | Feb 14-16, 2019 | Pune, India |
-| Oct 12, 2018 | Oct 5, 2018 | ICST | <a href="http://icst2019.xjtu.edu.cn/">12th International Conference on Software Testing, Verification, and Validation</a> | Apr 24-26, 2019 | Xian, China |
-| Oct 1, 2018 |  | VMCAI | <a href="http://popl19.sigplan.org/track/VMCAI-2019">20th International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | Lisbon, Portugal | 
-| Oct 1, 2018 | Sep 24, 2018 | EuroSys | <a href="https://www.eurosys2019.org/">European Conference on Computer Systems</a> | March 25-28, 2019 | Dresden, Germany | 
-| Aug 13, 2018 |  | PPoPP | <a href="https://ppopp19.sigplan.org/">24th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 16-20, 2019 | Washington, DC, USA | 
+
+
+
+
 
 
 2018 TODOs
